--- a/src/assets/_project/_blocks/layout/header/_site-utilities.scss
+++ b/src/assets/_project/_blocks/layout/header/_site-utilities.scss
@@ -1,6 +1,6 @@
 #qg-site-header .qg-utilities {
   @include make-xs-column(6);
-  @include make-md-column(3);
+  @include make-md-column(5);
 
   /*
   @extend .col-xs-12;
