--- a/src/assets/_project/_blocks/layout/section-nav/_section-nav.scss
+++ b/src/assets/_project/_blocks/layout/section-nav/_section-nav.scss
@@ -6,7 +6,7 @@
   h2 {
     @include qg-responsive-spacing(padding);
     @include qg-responsive-spacing(padding-top, full);
-    @include qg-responsive-spacing(padding-left, $small: 0, $large: full);
+    @include qg-responsive-spacing(padding-left, $min: 0, $large: full);
     
     margin:  0;
 
@@ -74,17 +74,11 @@
       background-color: $qg-section-nav-bg-color
     }
 
-    // h2 {
-    //   padding-bottom: $qg-spacing-xs-small;
-    //   padding-left: ($qg-spacing-xs / 2);
-    //   padding-right: ($qg-spacing-xs / 2);
-    // }
     ul {
       padding: 0 0 ($qg-spacing * 0.7) 0;
     }
     li {
       a {
-        // padding: .7em ($qg-spacing/2) .7em ($qg-spacing + 15px);
         padding-left: ($qg-spacing-xs / 2) + 15px;
       }
       a:before {
@@ -93,9 +87,6 @@
     }
   }
   @media (min-width: $screen-lg-min) {
-    // h2 {
-    //   padding: $qg-spacing $qg-spacing $qg-spacing-xs-small $qg-spacing;
-    // }
     li {
       a {
         padding: .7em ($qg-spacing/2) .7em ($qg-spacing + 15px);
@@ -108,5 +99,13 @@
 
   @media print {
     display: none;
+  }
+}
+
+@media (min-width: $screen-md-min) {
+  // Set to shown to prevent section nav from being hidden
+  #qg-section-nav.collapse{
+     display: block;
+     height: auto !important;
   }
 }
